# VisuaLearn

./: .eslintrc.json  .gitignore  API_DIAGNOSTICS.md  BACKEND_SETUP.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INTEGRATION_TEST_PLAN.md  LOCAL_SETUP.md  PHASE_1_SUMMARY.md  PRD.md  PROJECT_STATUS.md  PROMPT_OPTIMIZATION.md  QUICKSTART.md  QUICK_START.md  README.md  RESPONSE_STORAGE_IMPLEMENTATION.md  ROADMAP.md  SIMPLIFIED_FASTAPI_MVP.md  START_HERE.md  STREAMING_API.md  VALIDATION_SUMMARY.md  claude.md  diagram.xml  docker-compose.yml  gemini.md  package.json  test-api-connectivity.js  test-api-quota.js  test-large-prompt.js  test-optimized-prompt.js  test-prompt-sizes.js  test_streaming_api.html  test_streaming_endpoint.py
backend/: .env.example  .gitignore  AUDIT_CHECKLIST.md  DRAWIO_SETUP.md  Dockerfile  EXPORT_ENDPOINT_IMPLEMENTATION.md  FRONTEND_SVG_IMPLEMENTATION.md  MCP_IMPLEMENTATION_PLAN.md  MCP_INTEGRATION_RESEARCH.md  README.md  RESPONSE_FLOW_DIAGRAM.txt  RESPONSE_STORAGE_GUIDE.md  RESPONSE_STORAGE_QUICKREF.md  SVG_MIGRATION_AUDIT.md  XML_TO_SVG_RESEARCH_FINDINGS.md  inspect_responses.sh  main.py  package.json  pyproject.toml  tsconfig.json
backend/app/: config.py  errors.py  main.py
backend/app/api/: diagram.py
backend/app/models/: schemas.py
backend/app/responses/: 01_planning_1770044179362.json  01_planning_1770044325729.json  01_planning_1770044884845.json  (+19 more)
backend/src/: app.ts  index.ts
backend/tests/: conftest.py  test_integration.py
(+87 files in other folders)
