[project]
name = "visualearn"
version = "0.1.0"
description = "AI-Powered Educational Diagram Generation Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "google-generativeai==0.3.0",
    "httpx==0.25.2",
    "loguru==0.7.2",
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "mypy==1.7.1",
    "ruff==0.1.8",
    "black==23.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "mypy==1.7.1",
    "ruff==0.1.8",
    "black==23.12.0",
]
